--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
   },
   "homepage": "https://github.com/Thiagolad/Thiagolad-Thiagolad.github.io#readme",
   "dependencies": {
-    "react-router-dom": "^6.14.2"
-  },
-  "devDependencies": {
-    "eslint": "^8.45.0"
+    "react-router-dom": "^6.14.2",
+    "vite": "^4.4.7"
   }
 }
